web-infras/parser/tests/fixtures/babel/es2022/module-string-names/string-exported-binding-without-from/output.txt
[SyntaxError]: A string literal cannot be used as an exported binding without `from`. (1,10)
1|export { "學而時習之，不亦說乎？", "吾道一以貫之。" as "忠恕。" };
 |        ^
[SyntaxError]: A string literal cannot be used as an exported binding without `from`. (1,25)
1|export { "學而時習之，不亦說乎？", "吾道一以貫之。" as "忠恕。" };
 |                       ^
[SyntaxError]: Export variable is not defined. (1,10)
1|export { "學而時習之，不亦說乎？", "吾道一以貫之。" as "忠恕。" };
 |        ^
[SyntaxError]: Export variable is not defined. (1,25)
1|export { "學而時習之，不亦說乎？", "吾道一以貫之。" as "忠恕。" };
 |                       ^
